--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@
   color: #fff;
   text-align: center;
   background-color: #fff;
-  background-image: linear-gradient(to bottom, #b2182b, #fff);
+  background-image: linear-gradient(to bottom, #4393c3, #fff);
 }
 
 .main-content {
